<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <artifactId>cratos</artifactId>
        <groupId>com.baiyi.cratos</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>cratos-manage</artifactId>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <start-class>com.baiyi.cratos.ManageApplication</start-class>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.baiyi.cratos</groupId>
            <artifactId>cratos-service</artifactId>
        </dependency>
        <dependency>
            <groupId>com.baiyi.cratos</groupId>
            <artifactId>cratos-common</artifactId>
        </dependency>
        <dependency>
            <groupId>com.baiyi.cratos</groupId>
            <artifactId>cratos-shell</artifactId>
        </dependency>
        <dependency>
            <groupId>com.baiyi.cratos</groupId>
            <artifactId>cratos-eds</artifactId>
        </dependency>
        <dependency>
            <groupId>com.baiyi.cratos</groupId>
            <artifactId>cratos-ssh-crystal</artifactId>
        </dependency>
        <dependency>
            <groupId>com.baiyi.cratos</groupId>
            <artifactId>cratos-ssh-kubernetes</artifactId>
        </dependency>
        <dependency>
            <groupId>com.baiyi.cratos</groupId>
            <artifactId>cratos-workorder</artifactId>
        </dependency>
        <!-- Janino for Logback conditional processing -->
        <dependency>
            <groupId>org.codehaus.janino</groupId>
            <artifactId>janino</artifactId>
            <version>3.1.12</version>
        </dependency>
        <dependency>
            <groupId>com.baiyi.cratos</groupId>
            <artifactId>cratos-socks-server</artifactId>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>local</id>
            <properties>
                <env>local</env>
            </properties>
        </profile>
        <profile>
            <id>dev</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <env>dev</env>
            </properties>
        </profile>
        <profile>
            <id>github</id>
            <properties>
                <env>github</env>
            </properties>
        </profile>
        <profile>
            <id>pre</id>
            <properties>
                <env>pre</env>
            </properties>
        </profile>
        <profile>
            <id>prod</id>
            <properties>
                <env>prod</env>
            </properties>
        </profile>
    </profiles>

    <build>
        <finalName>${project.artifactId}-${env}</finalName>
        <resources>
            <resource>
                <filtering>true</filtering>
                <directory>src/main/resources</directory>
                <excludes>
                    <exclude>application-dev.yml</exclude>
                    <exclude>application-github.yml</exclude>
                    <exclude>application-pre.yml</exclude>
                    <exclude>application-prod.yml</exclude>
                    <exclude>static/fonts/**</exclude>
                </excludes>
            </resource>
            <resource>
                <filtering>true</filtering>
                <directory>src/main/resources</directory>
                <includes>
                    <include>application-${env}.yml</include>
                    <include>application.yml</include>
                </includes>
            </resource>
            <resource>
                <filtering>false</filtering>
                <directory>src/main/resources</directory>
                <includes>
                    <include>static/fonts/*.ttf</include>
                    <include>static/fonts/*.woff</include>
                    <include>static/fonts/*.woff2</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <mainClass>${start-class}</mainClass>
                    <excludes>
                        <exclude>
                            <groupId>org.bouncycastle</groupId>
                            <artifactId>bcprov-jdk15on</artifactId>
                        </exclude>
                        <exclude>
                            <groupId>org.bouncycastle</groupId>
                            <artifactId>bcpkix-jdk15on</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!--跳过test begin-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.1</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <!--跳过test end-->
        </plugins>
    </build>

</project>